deploiement/ressources/k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: city-frontend
  namespace: city
  labels:
    app: city-frontend
spec:
  type: ClusterIP
  selector:
    app: city-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: city-frontend
  namespace: city
  labels:
    app: city-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: city-frontend
  template:
    metadata:
      labels:
        app: city-frontend
    spec:
      priorityClassName: city-presentation
      securityContext:
        runAsNonRoot: true
        runAsUser: 101                 # nginx user
        fsGroup: 101
      containers:
        - name: frontend
          image: ghcr.io/REPLACE_ORG/city-frontend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 30
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]      # nécessaire pour bind port 80
          volumeMounts:
            - name: cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /var/run
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: tmp
          emptyDir: {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values: ["city-frontend"]
                topologyKey: kubernetes.io/hostname
